# llm-eval-with-pytest-ragas

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
datasets/: sample_qa.json
docs/: getting-started.md  metrics-explained.md  pycon-hk-2026-slides-outline.md
examples/: basic_eval.py  custom_metrics.py  rag_eval.py
src/llm_eval/: __init__.py  client.py  memory.py  metrics.py  rag_pipeline.py
tests/: conftest.py  test_answer_relevancy.py  test_context_recall.py  test_custom_metrics.py  test_faithfulness.py  test_integration.py  test_memory.py
